<resources>
    <string name="app_name">MTK Reader</string>
    <string name="square_bracket">[ %s ]</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="go_back">Go Back</string>
    <string name="can_t_find_your_device">Can\'t find your device?</string>
    <string name="pair_with_device_using_code">Pair with device using code:</string>
    <string name="_1902">1902</string>
    <string name="dismiss">Dismiss</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="display_last_reading">Display last reading</string>
    <string name="general">General</string>
    <string name="device_type">Device type</string>
    <string name="hdo_frequency">HDO frequency</string>
    <string name="raster">Raster</string>
    <string-array name="rra">
        <item>Semagyr 50a</item>
        <item>Ricontic b</item>
        <item>Pulsadis(EdF)</item>
        <item>Inematic 2000</item>
        <item>ZPA-I-I</item>
        <item>ZPA-I-Ik</item>
        <item>CEZ 50D</item>
        <item>CEZ 50K</item>
    </string-array>
    <string name="sensitivity">Sensitivity</string>
    <string name="tel_raster_time_base">Tel. raster time base</string>
    <string name="network50hz">Network(50Hz)</string>
    <string name="clock">Clock</string>
    <string name="rtc_time_base">RTC time base</string>
    <string name="quartz">Quartz 32768 Hz</string>
    <string name="rtc_dst">Automatic daylight saving time</string>
    <string-array name="rtcloss">
        <item>None</item>
        <item>a</item>
        <item>b</item>
        <item>Same as PWON</item>
        <item>Continue with 50Hz</item>
    </string-array>
    <string name="rtc_loss_action">RTC Loss action</string>
    <string name="address_length_teleg">Address length of telegram DIN–43861–301</string>
    <string name="sync_teleg_day">synchronization telegram - day >> time</string>
    <string name="id">ID</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="day_cycle_active">24h cycle - active</string>
    <string name="day_cycle_delay">24h cycle - delay</string>
    <string name="track_relay_position">Track relay position after time synchronization</string>
    <string name="power_bridge_time">Power bridging time</string>
    <string name="relay_settings">Relay settings</string>
    <string name="relay_num">Relay %d</string>
    <string name="relay_num_char">Relay %d %s</string>
    <string name="relay_installed">Relay installed(active)</string>
    <string name="inverted_logic">Inverted logic</string>
    <string name="relay_switching_assignment">Relay switching assignment</string>
    <string name="relay_num_a">Relay %d a</string>
    <string name="relay_num_b">Relay %d b</string>
    <string name="switching_delay">Switching delay</string>
    <string name="delay_a">Delay a(hh:mm:ss)</string>
    <string name="delay_b">Delay b(hh:mm:ss)</string>
    <string name="random">Random</string>
    <string name="fixed">Fixed</string>
    <string name="classic_telegram">Classic telegram</string>
    <string name="telegram">Telegram</string>
    <string name="IDSI_COL_NAME">Tarrif/name</string>
    <string name="IDSI_REZIM">Mode of operation</string>
    <string name="IDSI_REZIM_HDO">Ripple control receiver</string>
    <string name="IDSI_REZIM_TIMESWITCH">Time switch</string>
    <string name="IDSI_LASTREPARAMTIME">Last reparametrization:</string>
    <string name="IDSI_CREATED_UID">Created - User ID:</string>
    <string name="IDSI_CREATED_PCUID">Created - PC Username:</string>
    <string name="IDSI_REPARM_UID">Reparametrized - User ID:</string>
    <string name="IDSI_REPARM_PCUID">Reparametrized - PC Username:</string>
    <string name="IDSI_PARM_FILE">Parameter file:</string>
    <string name="IDSI_SERIALNUM">Serial number:</string>
    <string name="IDSI_PARAMS">Parameters</string>
    <string name="IDSI_COMMENT">Comment</string>
    <string name="IDSI_PARM_FROM_DEVICE"> (from device)</string>
    <string name="IDSI_PARM_FROM_FILE"> (from file)</string>
    <string name="IDSI_PARM_FROM_NEW"> (new)</string>
    <string name="name">Name</string>
    <string name="a">A</string>
    <string name="IDSI_ON"> a</string>
    <string name="IDSI_OFF"> b</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="z">Z</string>
    <string name="unknown">Unknown</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="additional_telegrams">Additional telegrams</string>
    <string name="sync_telegrams">Synchronization telegrams</string>
    <string name="sync_telegrams_dow">Synchronization telegrams - day of the week</string>
    <string name="IDSI_EMERGTLG">Emergency tel. </string>
    <string name="IDSCB_FN_TELEG1_0">---</string>
    <string name="IDSCB_FN_TELEG1_1">Cyclic R1</string>
    <string name="IDSCB_FN_TELEG1_2">Cyclic R2</string>
    <string name="IDSCB_FN_TELEG1_3">Cyclic R3</string>
    <string name="IDSCB_FN_TELEG1_4">Cyclic R4</string>
    <string name="IDSCB_FN_TELEG1_5">Sync weekday</string>
    <string name="IDSCB_FN_TELEG1_6">Disable learn function</string>
    <string name="IDSCB_FN_TELEG1_7">Enable learn function</string>
    <string name="IDSCB_FN_TELEG1_8">Activate WS for all R</string>
    <string name="IDSCB_FN_TELEG1_9">Activate WS for R1</string>
    <string name="IDSCB_FN_TELEG1_10">Activate WS for R2</string>
    <string name="IDSCB_FN_TELEG1_11">Activate WS for R3</string>
    <string name="IDSCB_FN_TELEG1_12">Activate WS for R4</string>
    <string name="IDSCB_FN_TELEG1_13">Stop WS for all R</string>
    <string name="IDSCB_FN_TELEG1_14">Stop WS for R1</string>
    <string name="IDSCB_FN_TELEG1_15">Stop WS for R2</string>
    <string name="IDSCB_FN_TELEG1_16">Stop WS for R3</string>
    <string name="IDSCB_FN_TELEG1_17">Stop WS for R4</string>
    <string name="IDSCB_FN_TELEG1_18">Inter. learn function</string>
    <string-array name="dan_sync_tg">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
        <item>----</item>
    </string-array>
    <string name="work_scheds">Work Schedules</string>
    <string name="time_pair">Time pair</string>
    <string name="t_a_par">T - a</string>
    <string name="t_b_par">T - b</string>
    <string-array name="a_days">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
        <item>Ho.</item>
    </string-array>
    <string name="work_schedules">Work Schedules</string>
    <string name="active">Active</string>
    <string name="work_schedules_time_pairs">Work schedules - Time pairs Relay</string>
    <string name="wiper_and_closed_loop">Wiper and Closed Loop</string>
    <string name="wiper_enable">Wiper Enable</string>
    <string name="retrigerable">Retrigerable</string>
    <string name="activation_command">Activation command</string>
    <string name="wiper_time">Wiper Time</string>
    <string name="scheduled_switching_activation_delay">Scheduled switching activation delay</string>
    <string name="loop_enable">Loop Enable</string>
    <string name="duration_in_position">Duration in position</string>
    <string name="xx">XX</string>
    <string name="learn_functions">Learn Functions</string>
    <string name="learn_period">Learn Period</string>
    <string name="position">Position</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="day_h">24 h</string>
    <string name="seven_days">7 days</string>
    <string name="telegram_absence">Telegram Absence</string>
    <string name="on_timer_restart">On timer restart event disables work schedule</string>
    <string name="action">Action</string>
    <string name="absence_time">Absence Time</string>
    <string name="rst_timer_on">Reset timer on</string>
    <string name="learn_function_disabled">Learn function disabled</string>
    <string name="arrival_and_loss_of_supply">Arrival and loss of supply</string>
    <string name="stop_learn_and_wiper_functions">Stop learn and wiper functions</string>
    <string name="power_supply_loss_time">Power supply loss time</string>
    <string name="loss_of_supply_short">Loss of supply(short) - action</string>
    <string name="loss_of_supply_long_ignore">Loss of supply(long) - ignore action</string>
    <string name="loss_of_supply_long_action">Loss of supply(long) - action</string>
    <string name="switch_delay_min">Switching delay - min</string>
    <string name="switch_delay_max">Switching delay - max</string>
    <string-array name="rst">
        <item>----</item>
        <item>Valid start impulse</item>
        <item>Valid telegram</item>
        <item>Telegram for this receiver</item>
        <item>Telegram for this relay</item>
    </string-array>
    <string-array name="act">
        <item>----</item>
        <item>"a"</item>
        <item>"b"</item>
        <item>Enable work schedule</item>
        <item>Disable work schedule</item>
        <item>Switch to work sched.</item>
        <item>Switch to loop schedule</item>
    </string-array>
    <string-array name="poffS">
        <item>None</item>
        <item>"a"</item>
        <item>"b"</item>
        <item>"a" with delayed sched.</item>
        <item>"b" with delayed sched.</item>
        <item>As before power loss</item>
        <item>Switch to work sched.</item>
        <item>Enable work sched.</item>
        <item>Disable work sched.</item>
        <item>Loop switching</item>
    </string-array>
    <string-array name="poffL">
        <item>None</item>
        <item>"a"</item>
        <item>"b"</item>
        <item>"a" with delayed sched.</item>
        <item>"b" with delayed sched.</item>
        <item>As before power loss</item>
    </string-array>
    <string-array name="poffAct">
        <item>None</item>
        <item>"a"</item>
        <item>"b"</item>
    </string-array>
    <string name="event_log">Event Log</string>
    <string name="common_log">Common Log</string>
    <string name="power_on_off_time">Power on/off time</string>
    <string name="synchronization_telegram_time">Synchronization telegram - time</string>
    <string name="synchronization_telegram_day">Synchronization telegram - day</string>
    <string name="local_change_of_time">Local change of time</string>
    <string name="rtc_log">RTC Log</string>
    <string name="relay_log">Relay Log</string>
    <string name="rtc_stop">RTC Stop</string>
    <string name="oscillator_fail">Oscillator fail</string>
    <string name="battery_low">Battery low</string>
    <string name="relay_switched_by_telegram">Relay switched by telegram</string>
    <string name="relay_switched_by_program">Relay switched by program</string>
    <string name="relay_switched_by_pwron">Relay switched at power ON</string>
    <string name="start_wiper">Start Wiper</string>
    <string name="end_wiper">End Wiper</string>
    <string name="telegram_absence_start">Telegram absence start</string>
    <string name="telegram_absence_restart">Telegram absence restart</string>
    <string name="work_schedule_disabled">Work schedule disabled</string>
    <string name="work_schedule_enabled">Work schedule enabled</string>
    <string name="telegram_log">Telegram log</string>
    <string name="log_all_telegrams">Log all telegrams</string>
    <string name="pick_time">Pick time</string>
    <string name="retry">Retry</string>
    <string name="program_time">Program time</string>
    <string name="pick_date">Pick date</string>
    <string name="time_to_program">Time to program:</string>
    <string name="date_to_program">Date to program:</string>
    <string name="device_time">Device time:</string>
    <string name="device_date">Device date:</string>
</resources>